--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
+<link rel="icon" type="ico" href="IMG/AMP4CCH.ico">
 <head>
+  <link rel="stylesheet" type="text/css" href="DA.css">
   <meta charset="utf-8">
   <title>Doomer Official Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
