--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body>
-  <p>Esta pagina solo es un prototipo escrita en HTML.</p>
+  <style type="text/css">
+  
+body {
+      color: black;
+      background-image: url(IMG/galaxiared.jpg);
+      background-size:1024px 1024px;
+      min-height:100%;
+      background-size:cover;
+      }
+  </style>
 </body>
 </html>
