--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
   <style type="text/css">
   
 body {
-      color: black;
+      color: floralwhite;
       background-image: url(IMG/galaxiared.jpg);
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
       }
   </style>
+
+<div align="center">
+  <b>Archivos MP4 Con Caracter Humoristico</b> La pagina oficial del canal en HTML5! <b>-Doomer-</b>. 
+  <br>
+  Prohibida la entrada a gente con olor a perfume caro.<br>
+</div>
+
 </body>
 </html>
