--- a/index.html
+++ b/index.html
@@ -20,10 +20,23 @@ body {
       }
   </style>
 
+<div align="center"><h1 class="titulodepagina"> DOOMER6699 </h1></div>
+
+<br>
+<br>    
+<br>
+<br>
+<br>    
+<br>
+<br>
+
 <div align="center">
-  <b>Archivos MP4 Con Caracter Humoristico</b> La pagina oficial del canal en HTML5! <b>-Doomer-</b>. 
-  <br>
-  Prohibida la entrada a gente con olor a perfume caro.<br>
+  <b>Archivos MP4 Con Caracter Humoristico</b> <b>La pagina oficial del canal en HTML5!</b> 
+  <b>-Doomer-</b>.   
+</div>
+
+<div align="center">
+  <b>Prohibida la entrada a gente con olor a perfume caro.<b>
 </div>
 
 </body>
