--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/galaxiared.jpg);
+      background-image: url(IMG/space.jpg);
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
@@ -37,6 +37,42 @@ body {
 
 <div align="center">
   <b>Prohibida la entrada a gente con olor a perfume caro.<b>
+</div>
+
+<br>
+<br>    
+<br>
+<br>
+<br>    
+<br>
+<br>
+
+<div align="center">
+  <a href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
+</div>
+
+<div align="center">
+  <a href= "https://www.youtube.com/c/ArchivosMP4ConCaracterHumoristico/featured"> YouTube </a> 
+</div>
+
+<div align="center">
+  <a href= "https://twitter.com/archydoomer"> Twitter </a> 
+</div>
+
+<div align="center">
+  <a href= "https://www.instagram.com/Doomer6699/"> Instagram </a> 
+</div>
+
+<div align="center">
+  <a href= "https://www.doomworld.com/profile/34949-doomguykiller69/"> Doom World </a> 
+</div>
+
+<div align="center">
+  <a href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
+</div>
+
+<div align="center">
+  <b>Only quality trash since 2018.<b>
 </div>
 
 </body>
