--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@ body {
 <br>
 
 <div align="center">
-  <b>Archivos MP4 Con Caracter Humoristico</b> <b>La pagina oficial del canal en HTML5!</b> 
-  <b>-Doomer-</b>.   
+  <b>Archivos MP4 Con Caracter Humoristico</b> <b>La pagina oficial del canal en HTML5!</b>   
 </div>
-
+<div align="center">
+  <b>-Doomer-<b>
+</div>
 <div align="center">
   <b>Prohibida la entrada a gente con olor a perfume caro.<b>
 </div>
@@ -44,8 +45,6 @@ body {
 <br>
 <br>
 <br>    
-<br>
-<br>
 
 <div align="center">
   <a href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
