--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ body {
 <br>
 <br>    
 
+<!-- Si lees esto quiero que sepas que hueles a pan de platano -->
+
 <div align="center">
   <a href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
 </div>
@@ -70,9 +72,31 @@ body {
   <a href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
 </div>
 
+<br>
+<br> 
+
+<div align="center">
+
+<form method="get" action="https://archy-doomer.itch.io/">
+
+  <button type="submit">
+
+    <b>Boton Aleatorio</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+<br>
+
 <div align="center">
   <b>Only quality trash since 2018.<b>
 </div>
 
+
 </body>
+
 </html>
