--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://archy-doomer.itch.io/">
+<form method="get" action="https://youtu.be/nb9t6yo05X8">
 
   <button type="submit">
 
@@ -95,7 +95,6 @@ body {
 <div align="center">
   <b>Only quality trash since 2018.<b>
 </div>
-
 
 </body>
 
