--- a/index.html
+++ b/index.html
@@ -20,7 +20,31 @@ body {
       }
   </style>
 
-<div align="center"><h1 class="titulodepagina"> DOOMER6699 </h1></div>
+<style type="text/css">
+    .Titulo { 
+          margin: 0px;
+          font-family: "Homer Simpson UI";
+          color: whitesmoke; 
+          font-size: 40px;
+          text-align: center;
+          background-image: url(IMG/galaxia.jpg);
+          background-size: cover;
+          padding: 3px 10px;
+          border: black 5px solid;
+          background-attachment: fixed;
+          position: fixed;
+          height: 60px;
+          width: 100%; 
+          left: 100; 
+          right: 100;
+          top: 100; 
+          position: fixed; 
+          display: block;
+
+  }
+  </style>
+
+<div align="center"><h1 class="Titulo"> DOOMER6699 </h1></div>
 
 <br>
 <br>    
@@ -92,9 +116,23 @@ body {
 <br>
 <br>
 
+<div align="center"><h2 class="bloque1"> ¡HeyOoooi! </h2></div>
+<div align="center"><h3 class="bloque2"> 28 de Diciembre del año 2022 </h3></div>
+<div align="center"> 
+<b>Ahora a todo color y con bajo presupuesto la pagina del canal Archivos MP4 Con Caracter Humoristico a llegado
+creada en lenguaje HTML5 y poco pero muy muy muy poco de CSS, dentro de los servidores de GitHub (dios bendiga GH)
+con una estetica de pagina de los 2000s/90s esta pagina esta disponible para todo aquel que quiera enterarse del Lore del universo ARCHYDumer, de los futuros proyectos como los videojuegos o simplemente para ver mi poca estabilidad mental desaparecer dia a dia en los post que subire a manera de blog!
+</b>
+</div>
+
+<br>
+<br>
+
 <div align="center">
   <b>Only quality trash since 2018.<b>
 </div>
+
+
 
 </body>
 
