--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body {
 
   <button type="submit">
 
-    <b>Boton Aleatorio</b>
+    <b>Random Button</b>
 
   </button>
 
@@ -119,7 +119,7 @@ body {
 <div align="center"><h2 class="bloque1"> ¡HeyOoooi! </h2></div>
 <div align="center"><h3 class="bloque2"> 28 de Diciembre del año 2022 </h3></div>
 <div align="center"> 
-<b>Ahora a todo color y con bajo presupuesto la pagina del canal Archivos MP4 Con Caracter Humoristico a llegado
+<b>Ahora a todo color y con bajo presupuesto la pagina del canal Archivos MP4 Con Caracter Humoristico a llegado! 
 creada en lenguaje HTML5 y poco pero muy muy muy poco de CSS, dentro de los servidores de GitHub (dios bendiga GH)
 con una estetica de pagina de los 2000s/90s esta pagina esta disponible para todo aquel que quiera enterarse del Lore del universo ARCHYDumer, de los futuros proyectos como los videojuegos o simplemente para ver mi poca estabilidad mental desaparecer dia a dia en los post que subire a manera de blog!
 </b>
