--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 </div>
 
 <br>
+
+<div align="center">
+<img src="IMG/CatDoom.png" height="150px" width="150px">
+</div>
+
+<br>
 <br>
 
 <div align="center">
