--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@ body {
 
 <br>
 <br>    
-<br>
-<br>
-<br>    
 
 <!-- Si lees esto quiero que sepas que hueles a pan de platano -->
 
@@ -99,25 +96,10 @@ body {
 <br>
 <br> 
 
-<div align="center">
-
-<form method="get" action="https://youtu.be/nb9t6yo05X8">
-
-  <button type="submit">
-
-    <b>Random Button</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-<br>
-
 <div align="center"><h2 class="bloque1"> ¡HeyOoooi! </h2></div>
+
 <div align="center"><h3 class="bloque2"> 28 de Diciembre del año 2022 </h3></div>
+
 <div align="center"> 
 <b>Ahora a todo color y con bajo presupuesto la pagina del canal Archivos MP4 Con Caracter Humoristico a llegado! 
 creada en lenguaje HTML5 y poco pero muy muy muy poco de CSS, dentro de los servidores de GitHub (dios bendiga GH)
@@ -135,10 +117,41 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 <br>
 
 <div align="center">
-  <b>Only quality trash since 2018.<b>
+
+<form method="get" action="https://youtu.be/nb9t6yo05X8">
+
+  <button type="submit">
+
+    <b>Random Button</b>
+
+  </button>
+
+  </form>
+  
 </div>
 
+<br>
 
+<div align="center">
+
+<form method="get" action="aboutme.html">
+
+  <button type="submit">
+
+    <b>About Me!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+<br>
+
+<div align="center">
+  <b>Only quality trash since 2018.<b>
+</div>
 
 </body>
 
