--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 
+<!-- CSS Block Start -->
+
   <style type="text/css">
   
 body {
@@ -22,8 +24,17 @@ body {
 
 <body>
 
-<div align="center">
+<!-- CSS Block End -->  
+
+<div align="center"><h2 class="bloque1">
   <b>Que curioso, aun no hay nada aquí.<b>
+</div></h2></div>
+
+<br>
+<br>
+
+<div align="center">
+<img src="IMG/buebos.jpeg" height="500px" width="500px">
 </div>
 
 </body>
