--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@ body {
 <br>
 
 <div align="center">
-<img src="IMG/buebos.jpeg" height="500px" width="500px">
+<img src="IMG/buebos.png" height="500px" width="500px">
 </div>
 
 </body>
