--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 
+<!-- CSS Block Start -->
+
   <style type="text/css">
   
 body {
@@ -43,6 +45,8 @@ body {
 
   }
   </style>
+
+<!-- CSS Block End -->
 
 <div align="center"><h1 class="Titulo"> 66DOOMER99 </h1></div>
 
@@ -111,6 +115,22 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 
 <div align="center">
 <img src="IMG/CatDoom.png" height="150px" width="150px">
+</div>
+
+<br>
+<br>
+
+<div align="center"><h1> Videos Random </h1></div>
+
+<br>
+
+<div align="center"> 
+
+<video width="200px" height="200px" controls> <source src="VID/LQM.mp4" type="video/mp4">
+  Tu navegador es tan viejo que no lo lee ni Dios
+
+</video>
+
 </div>
 
 <br>
