--- a/index.html
+++ b/index.html
@@ -151,6 +151,25 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 <br>
 <br>
 
+<div align="center"><h1> ¡Noticias! </h1></div>
+
+
+<div align="center"> 
+<b> Hay un nuevo post en Itch.Io disponible en el que hablo del nuevo juego en desarrollo!
+</b>
+</div>
+
+<div align="center">
+  <a href= "https://itch.io/blog/469022/el-nuevo-juego-que-unir-universos-alternos-en-8bits"> Ve el nuevo Devlog aquí </a> 
+</div>
+
+<div align="center">
+<img src="IMG/gameboycartridgelabel.png" height="150px" width="180px">
+</div>
+
+<br>
+<br>
+
 <div align="center">
 
 <form method="get" action="https://youtu.be/nb9t6yo05X8">
@@ -174,6 +193,22 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
   <button type="submit">
 
     <b>About Me!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="blog.html">
+
+  <button type="submit">
+
+    <b>Blog</b>
 
   </button>
 
