--- a/index.html
+++ b/index.html
@@ -235,9 +235,36 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 <br>
 <br>
 
+<div align="left"> 
+<b> Canales Con Calidad Media Baja!
+</b>
+</div>
+
+<div align="left">
+  <a href= "https://www.youtube.com/channel/UCRJ3R_v78u9JvU5cvfkAaWg"> Un CheemsJolote </a> 
+</div>
+
+<div align="left">
+  <a href= "https://www.youtube.com/channel/UCYcOJgC3tyKLnbSRtrPsZAw"> Bala </a> 
+</div>
+
+<div align="left">
+  <a href= "https://www.youtube.com/channel/UCPaQmL2_7ux2zqFoUnwqCPA"> Toyota Corolla </a> 
+</div>
+
+<div align="left">
+  <a href= "https://www.youtube.com/channel/UCkW7sIXLCJhuGehIPIE4Cuw"> Soy El Vengador! </a> 
+</div>
+
+<div align="left">
+  <a href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
+</div>
+
 <div align="center">
   <b>Only quality trash since 2018.<b>
 </div>
+
+<br>
 
 </body>
 
