--- a/index.html
+++ b/index.html
@@ -220,6 +220,22 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 
 <div align="center">
 
+<form method="get" action="music.html">
+
+  <button type="submit">
+
+    <b>Good Music</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
 <form method="get" action="https://youtu.be/9NcPvmk4vfo">
 
   <button type="submit">
@@ -258,6 +274,14 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 
 <div align="left">
   <a href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
+</div>
+
+<div align="left">
+  <a href= "https://www.youtube.com/channel/UC-RnyUn9SkxAHaIflGoH50A"> Usario generico </a> 
+</div>
+
+<div align="left">
+  <a href= "https://www.youtube.com/channel/UCxAAer9-cktE4nVHwliNMKA"> Alejandro La Bellota </a> 
 </div>
 
 <div align="center">
