--- a/index.html
+++ b/index.html
@@ -236,6 +236,22 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 
 <div align="center">
 
+<form method="get" action="lore.html">
+
+  <button type="submit">
+
+    <b>El Lore del Multiverso Doomer</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
 <form method="get" action="https://youtu.be/9NcPvmk4vfo">
 
   <button type="submit">
@@ -283,6 +299,8 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 <div align="left">
   <a href= "https://www.youtube.com/channel/UCxAAer9-cktE4nVHwliNMKA"> Alejandro La Bellota </a> 
 </div>
+
+<br>
 
 <div align="center">
   <b>Only quality trash since 2018.<b>
