--- a/lore.html
+++ b/lore.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="DA.css">
   <meta charset="utf-8">
-  <title>Blog</title>
+  <title>Lore</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
 </head>
@@ -27,8 +27,13 @@ body {
 <!-- CSS Block End -->  
 
 <div align="center"><h2 class="bloque1">
-  <b>Nada por aquí.<b>
+  <b>El Lore del Multiverso Doomer<b>
 </div></h2></div>
+
+<div align="center"> 
+<b>Que curioso, aun no hay nada aquí.
+</b>
+</div>
 
 <br>
 <br>
