--- a/index.html
+++ b/index.html
@@ -267,6 +267,13 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 <br>
 <br>
 
+<div align="center">
+<img src="GIF/homers.gif" height="350px" width="380px">
+</div>
+
+<br>
+<br>
+
 <div align="left"> 
 <b> Canales Con Calidad Media Baja!
 </b>
