--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
     .Titulo { 
           margin: 0px;
           font-family: "Homer Simpson UI";
-          color: whitesmoke; 
+          color: white; 
           font-size: 40px;
           text-align: center;
           background-image: url(IMG/galaxia.jpg);
@@ -48,7 +48,7 @@ body {
 
 <!-- CSS Block End -->
 
-<div align="center"><h1 class="Titulo"> 66DOOMER99 </h1></div>
+<div align="center"><h1 class="Titulo"> DOOMER6699 </h1></div>
 
 <br>
 <br>    
@@ -61,9 +61,7 @@ body {
 <div align="center">
   <b>Archivos MP4 Con Caracter Humoristico</b> <b>La pagina oficial del canal en HTML5!</b>   
 </div>
-<div align="center">
-  <b>-Doomer-<b>
-</div>
+
 <div align="center">
   <b>Prohibida la entrada a gente con olor a perfume caro.<b>
 </div>
@@ -139,6 +137,13 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 <br>
 
 <div align="center"><h1> ¡New! </h1></div>
+
+<br>
+
+<div align="center"> 
+<b> Los Directos mas recientes estaran aquí!
+</b>
+</div>
 
 <br>
 
@@ -311,6 +316,10 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 
 <div align="center">
   <b>Only quality trash since 2018.<b>
+</div>
+
+<div align="center">
+  <b>-Doomer-<b>
 </div>
 
 <br>
