--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/space.jpg);
+      background-image: url(IMG/universe.png);
       background-size:1024px 1024px;
-      min-height:100%;
+      min-height:50%;
       background-size:cover;
       }
   </style>
@@ -244,6 +244,22 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
   <button type="submit">
 
     <b>El Lore del Multiverso Doomer</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="games.html">
+
+  <button type="submit">
+
+    <b>Noticias sobre los juegos del canal!</b>
 
   </button>
 
