--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@ body {
 
 <div align="center"> 
 <b>Ahora a todo color y con bajo presupuesto la pagina del canal Archivos MP4 Con Caracter Humoristico a llegado! 
-creada en lenguaje HTML5 y poco pero muy muy muy poco de CSS, dentro de los servidores de GitHub (dios bendiga GH)
-con una estetica de pagina de los 2000s/90s esta pagina esta disponible para todo aquel que quiera enterarse del Lore del universo ARCHYDumer, de los futuros proyectos como los videojuegos o simplemente para ver mi poca estabilidad mental desaparecer dia a dia en los post que subire a manera de blog!
+creada en lenguaje HTML5 y poco, pero muy muy muy poco de CSS, dentro de los servidores de GitHub! (dios bendiga GH)
+<br>
+Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para todo aquel que quiera enterarse del Lore del universo ARCHYDumer, de los futuros proyectos como los videojuegos o especiales en directo o simplemente para ver mi poca estabilidad mental desaparecer dia a dia en los post que subire a manera de blog!
 </b>
 </div>
 
@@ -114,6 +115,11 @@ con una estetica de pagina de los 2000s/90s esta pagina esta disponible para tod
 </div>
 
 <br>
+
+<div align="center">
+<img src="IMG/bar.png" height="100px" width="250px">
+</div>
+
 <br>
 
 <div align="center"><h1> Videos Random </h1></div>
