--- a/blog.html
+++ b/blog.html
@@ -27,14 +27,34 @@ body {
 <!-- CSS Block End -->  
 
 <div align="center"><h2 class="bloque1">
-  <b>Nada por aquí.<b>
+  <b>30 de Diciembre del año 2022<b>
 </div></h2></div>
 
 <br>
+
+<div align="center">
+  <b>Mañana es el gran extra epico especial fin de temporada 3 fin de año 2022 del canal!
+    <br>
+    9hr de Doomer en directo desde las 5 de la tarde del dia sabado, oh jesucristo no hay nadie que me aguante por tanto tiempo, veremos que pasa, tengo planeado jugar desde Postal 2 hasta Doom, si mi computadora no explota claro esta, deberia de comprar un maldito microfono!
+    <br>
+    ayer no fue un buen dia, no me encuentro bien del todo, pero todo va estar bien, o al menos eso espero, este año a estado lleno de altas y bajas, mas bajas que altas pero bueeee, asi es la vida, una perra y despues mueres, no todo a sido malo, viaje a otros lugares conoci gente genial consegui muchas cosas que necesitaba para crear aun mas contenido, no a estado del todo mal es curioso que en el especial fin de año del 2021 dije que este 2022 seria mi año... si supieras Doomer del pasado... si suíeras...
+    <br>
+    Voy a tratar de no decir eso de nuevo, tal vez asi se haga el efecto contrario!
+    <br>
+    Por ahora voy a preparar todo para la tarde mañana, todo por terminar esta temporada 3 llena de demonios traicioneros IAs hormonales Islas robadas y demandas por todos lados! 
+    <b>
+  </div>
+
 <br>
 
 <div align="center">
-<img src="IMG/buebos.png" height="500px" width="500px">
+<img src="GIF/gatogordo.gif" height="320px" width="360px">
+</div>
+
+<br>
+
+<div align="center">
+<img src="IMG/ELEXTRAESPECIALFINALDETEMPORADAver002.png" height="200px" width="300px">
 </div>
 
 </body>
