--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/universe.png);
+      background-image: url(IMG/galaxia.jpg);
       background-size:1024px 1024px;
       min-height:50%;
       background-size:cover;
@@ -93,6 +93,10 @@ body {
   <a href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
 </div>
 
+<div align="center">
+  <a href= "https://discord.gg/W6VQsjVTJg"> Discord </a> 
+</div>
+
 <br>
 <br> 
 
@@ -160,8 +164,12 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 <br>
 
-<div align="center"><h1> ¡Noticias! </h1></div>
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
 
+<div align="center"><h1> ¡Noticias! </h1></div>
 
 <div align="center"> 
 <b> Hay un nuevo post en Itch.Io disponible en el que hablo del nuevo juego en desarrollo!
@@ -177,11 +185,34 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <br>
+
+<div align="center"> 
+<b> Nuevo blog antes del especial fin de año!
+</b>
+</div>
+
+<br>
+
+<div align="center">
+  <a href= "blog.html"> Ve el nuevo Blog aquí </a> 
+</div>
+
+<br>
+
+<div align="center">
+<img src="GIF/gatogordo.gif" height="150px" width="180px">
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
 <br>
 
 <div align="center">
 
-<form method="get" action="https://youtu.be/nb9t6yo05X8">
+<form method="get" action="https://youtu.be/HWdKuMJTJ1M">
 
   <button type="submit">
 
@@ -277,6 +308,22 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
+<form method="get" action="fs.html">
+
+  <button type="submit">
+
+    <b>Free Software</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
 <form method="get" action="https://youtu.be/9NcPvmk4vfo">
 
   <button type="submit">
@@ -290,10 +337,19 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <br>
-<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
 
 <div align="center">
 <img src="GIF/homers.gif" height="320px" width="360px">
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
 </div>
 
 <br>
@@ -334,12 +390,20 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
 <div align="center">
   <b>Only quality trash since 2018.<b>
 </div>
 
 <div align="center">
   <b>-Doomer-<b>
+</div>
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
 </div>
 
 <br>
