--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@ body {
 
 <!-- Si lees esto quiero que sepas que hueles a pan de platano -->
 
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
 <div align="center">
   <a href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
 </div>
@@ -95,6 +100,11 @@ body {
 
 <div align="center">
   <a href= "https://discord.gg/W6VQsjVTJg"> Discord </a> 
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
 </div>
 
 <br>
@@ -144,6 +154,11 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 <br>
 
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
 <div align="center"><h1> ¡New! </h1></div>
 
 <br>
@@ -159,6 +174,11 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <iframe width="300" height="300" src="https://www.youtube.com/embed/EbR7_FREPwc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
 </div>
 
 <br>
