--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@ body {
     <br>
     9hr de Doomer en directo desde las 5 de la tarde del dia sabado, oh jesucristo no hay nadie que me aguante por tanto tiempo, veremos que pasa, tengo planeado jugar desde Postal 2 hasta Doom, si mi computadora no explota claro esta, deberia de comprar un maldito microfono!
     <br>
-    ayer no fue un buen dia, no me encuentro bien del todo, pero todo va estar bien, o al menos eso espero, este año a estado lleno de altas y bajas, mas bajas que altas pero bueeee, asi es la vida, una perra y despues mueres, no todo a sido malo, viaje a otros lugares conoci gente genial consegui muchas cosas que necesitaba para crear aun mas contenido, no a estado del todo mal es curioso que en el especial fin de año del 2021 dije que este 2022 seria mi año... si supieras Doomer del pasado... si suíeras...
+    ayer no fue un buen dia, no me encuentro bien del todo, pero todo va estar bien, o al menos eso espero, este año a estado lleno de altas y bajas, mas bajas que altas pero bueeee, asi es la vida, una perra y despues mueres, no todo a sido malo, viaje a otros lugares conoci gente genial consegui muchas cosas que necesitaba para crear aun mas contenido, no a estado del todo mal es curioso que en el especial fin de año del 2021 dije que este 2022 seria mi año... si supieras Doomer del pasado... si supíeras...
     <br>
     Voy a tratar de no decir eso de nuevo, tal vez asi se haga el efecto contrario!
     <br>
