--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@ body {
 <!-- CSS Block End -->  
 
 <div align="center"><h2 class="bloque1">
-  <b>30 de Diciembre del año 2022<b>
+  <b>30 de Diciembre del año 2022 11:34AM<b>
 </div></h2></div>
 
 <br>
