--- a/games.html
+++ b/games.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-<link rel="icon" type="ico" href="IMG/8bitsdoomer.ico">
+<link rel="icon" type="ico" href="GIF/doomguyface.gif">
 <head>
   <link rel="stylesheet" type="text/css" href="DA.css">
   <meta charset="utf-8">
-  <title>Games</title>
+  <title>Doomer Games</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
 </head>
@@ -15,7 +15,7 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/space.jpg);
+      background-image: url(IMG/world.png);
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
@@ -26,15 +26,172 @@ body {
 
 <!-- CSS Block End -->  
 
-<div align="center"><h2 class="bloque1">
-  <b>Nada por aquí.<b>
-</div></h2></div>
+<div align="center"><h1 class="bloque1">
+  <b>Juegos retro creados por Doomer!<b>
+</div></h1></div>
 
-<br>
 <br>
 
 <div align="center">
-<img src="IMG/buebos.png" height="400px" width="400px">
+  <b>En el extenso Multiverso de Doomer existen realidades muy muuy lejas y mas que extrañas, donde seres de todo tipo pueden existir, desde patatas con vida propia hasta Dumys fuera de su tiempo y realidades!
+  <br>
+  Pasa por la pagina de ITCH.IO de Doomer y descubre a estos curiosos personajes y a sus mundos llenos de cosas curiosas y bizarras!
+  <br>
+  <br>
+  Recuerda que todos los juegos de Doomer se pueden jugar en cualquier dispositivo como PC MAC Linux Android o IOS con un emulado de Gameboy Classic!
+  <br>
+  Incluso en cosolas con sistema operativo OpenDingux como Powkiddy o Anbernic
+  <br>
+  <br>
+  Si quieres que algun personaje tuyo aparezca como skin en The Potato Game mandame tus archivos a cualquiera de mis redes sociales por mensaje directo, para crear tu propia skin sigue las instrucciones que vienen en el archivo ZIP del juego The Potato Game!
+  <br>
+  En el juego hay cameos y personajes de otros juegos de la comunidad de GBStudio!
+  <br>
+  <br>
+  Descarga comparte y disfruta!
+  </b>  
+</div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<div align="center"> 
+<b> Links y Herramientas!
+</b>
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="https://emulation.gametechwiki.com/index.php/Gambatte">
+
+  <button type="submit">
+
+    <b>Gambatte Emulador para PC/MAC/Linux</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="https://archy-doomer.itch.io/the-potato-rotation-para-gameboy-color">
+
+  <button type="submit">
+
+    <b>The Potato Rotation!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="https://archy-doomer.itch.io/the-potato-game-for-gameboy-color">
+
+  <button type="submit">
+
+    <b>The Potato Game!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="https://archy-doomer.itch.io/deep-in-the-dark-will-never-shine-demo-02">
+
+  <button type="submit">
+
+    <b>Deep In The Dark Will Never Shine Demo!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="https://archy-doomer.itch.io/gb-studio-31-palette-for-libresprite">
+
+  <button type="submit">
+
+    <b>Paleta de colores para Libresprite!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="https://archy-doomer.itch.io/">
+
+  <button type="submit">
+
+    <b>Itch.Io de Doomer!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form method="get" action="https://libresprite.github.io/#!/">
+
+  <button type="submit">
+
+    <b>Libresprite para crear sprites 2D!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<div align="center">
+<img src="GIF/planet.gif" height="220px" width="280px">
+</div>
+
+<div align="center">
+<img src="IMG/8bitsdoomer.png" height="200px" width="200px">
 </div>
 
 </body>
