--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
   <button type="submit">
 
-    <b>Noticias sobre los juegos del canal!</b>
+    <b>Videojuegos creados por Doomer!</b>
 
   </button>
 
