--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
   <button type="submit">
 
-    <b>Memes de la comunidad</b>
+    <b>Doritos Pablo Memes</b>
 
   </button>
 
