--- a/meme.html
+++ b/meme.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="DA.css">
   <meta charset="utf-8">
-  <title>Memes de la comunidad</title>
+  <title>Doritos Pablo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
 </head>
