--- a/index.html
+++ b/index.html
@@ -463,4 +463,4 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 
 
-<!-- Un programado japones programo esta pagina, si lees esto por favor llama a las autoridades Doomer me tiene secuestrado en su sotano con una computadora de 2gb en RAM y 20gb de disco duro, por favor tengo familia e hijos en mi natal corea del sur, necesito saber que estan bien, creo que doomer no envia mis cartas por correo y esta PC no habre FB, mi nombre es Wong Chu Fo tengo 34 años y naci en corea del sur, la buena corea -->
+<!-- Un programado coreano programo esta pagina, si lees esto por favor llama a las autoridades Doomer me tiene secuestrado en su sotano con una computadora de 2gb en RAM y 20gb de disco duro, por favor tengo familia e hijos en mi natal corea del sur, necesito saber que estan bien, creo que doomer no envia mis cartas por correo y esta PC no habre FB, mi nombre es Wong Chu Fo tengo 34 años y naci en corea del sur, la buena corea -->
